--- a/analysis/admin.Rmd
+++ b/analysis/admin.Rmd
@@ -15,7 +15,7 @@ workflowr::wflow_build(files=c(
   # "Q4-GR-binding-PROTAC-genes.Rmd",
   # "Q7-PRX-sequences.Rmd",
   # "Q9-Differential_binding.Rmd",
-  # "01_Results.Rmd",
+  "01_Results.Rmd",
   "00_Download_files.Rmd",
   "index.Rmd"), 
   verbose=TRUE)
